examples/test/testpolicy2570.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2570
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key13: value35
      key19: value16
      key15: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value29
          key40: value0
      podSelector:
        matchLabels:
          key34: value8
          key12: value26
          key10: value16
